Premier commit manuel de squirrels
Why :
Initiation au versionnage d'un package

What :
Ajout d'une ligne de texte sur le .Rmd du README

--- a/dev/0-dev_history.Rmd
+++ b/dev/0-dev_history.Rmd
@@ -42,10 +42,16 @@ fusen::init_share_on_github()
 
 ```{r, eval=FALSE}
 usethis::use_git()
+
+usethis::use_git_remote("origin",
+                        url = "https://github.com/blbw2/squirrels.git",
+                        overwrite = TRUE)
 # Deal with classical files to ignore
 usethis::git_vaccinate()
 # Use main for primary branch
 usethis::git_default_branch_rename()
+
+
 ```
 
 # Set extra sources of documentation
