--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,9 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
+# Versionnage
+
+Mise à jour: squirrels est désormais versionné!
 
 # squirrels
 
