Modifications du README

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,10 @@ knitr::opts_chunk$set(
 
 Mise à jour: squirrels est désormais versionné!
 
+# Gestion des issues 
+
+04/06/2024 : Ce package a été créé dans le cadre d'une formation N2.
+
 # squirrels
 
 <!-- badges: start -->
